# buoy_rest_server

./: .gitignore  Cargo.toml  README.md  swagger.ps1
src/: main.rs
src/custom_middleware/: hi.rs  jwt.rs  mod.rs
src/db/: maria_lib.rs  mod.rs  model.rs  redis_lib.rs
src/db/meteo/: meteo_.rs  meteo_sky.rs  mod.rs
src/db/model/: auth_model.rs  common_model.rs  detail_model.rs  main_model.rs  mod.rs
src/middleware/: jwt.rs  mod.rs
src/routes/: auth_router.rs  detail_router.rs  etc_router.rs  main_router.rs  manage_router.rs  mod.rs  user_setting_router.rs
src/routes/functions/: auth.rs  detail_data.rs  etc.rs  main_data.rs  mod.rs  oauth.rs
src/test/: db_test.rs  etc_async_test.rs  etc_test.rs  mod.rs  route_test.rs
src/test/legacy/: db_test.rs  etc_async_test.rs  etc_test.rs  route_test.rs
src/test/routes/: detail_router_test.rs  main_router_test.rs  manage_router_test.rs  mod.rs  user_router_test.rs
src/test/stress_test/: index.js  package-lock.json  package.json
swagger/: swagger.yaml
swagger/api/: model.yaml  path.yaml
