[package]
name = "buoy_rest_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.6.1"
futures-util = "0.3.21"

mysql = "*"

lettre = "0.10.0-rc.5"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

chrono = "0.4"

dotenv = "0.15.0"

reqwest = { version = "0.11", features = ["blocking", "json"] }

env_logger = "0.9.0"

sha2 = "0.10.2"
base64 = "0.13.0"

jsonwebtoken = "8.1.0"

rand = "0.8.4"


[dependencies.redis]
version = "*"